add database.properties to take secret vriable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=ChaTop
+
+## Import des secrets du fichier database.properties ##
+
+spring.config.import=classpath:database.properties
+
