Auth Register / Login ( with JWT )

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.application.name=ChaTop
 
 spring.config.import=classpath:database.properties
 
+
+## Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
