Construtor manquant bug image + owner id not resolve

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.config.import=classpath:database.properties
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+app.base-url=http://localhost:2500
