--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.config.import=classpath:database.properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-app.base-url=http://localhost:2500
+app.base-url=http://localhost:3001
+
+spring.mvc.static-locations=classpath:/static/,classpath:/public/
